--- a/Q1-24/Drug Discovery/m1.ipynb
+++ b/Q1-24/Drug Discovery/m1.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Gene Sequencing\n",
     "\n",
-
+    "In this notebook, we will load in part of a genome sequence and search for patterns. Let's get started."
    ]
   },
   {
